--- a/Lec3.css
+++ b/Lec3.css
@@ -1,3 +1,5 @@
+/*This is a comment */
+
 body{
   background-color:black;
 }
@@ -5,6 +7,8 @@ body{
   color:green;
   font-family:"Arial",sans-serif;
   font-weight:bold;
+  text-align:center;
+  font-size:20px;
 }
 .orange{
   color:orange;
@@ -13,6 +17,7 @@ body{
 .pink{
   color:magenta;
   font-family:"Arial",sans-serif;
+  text-align:right;
 }
 .yellow{
   color:yellow;
@@ -23,7 +28,5 @@ body{
 .red{
   color:red;
   font-family:"Arial",sans-serif;
-  font-size:10px;
-  position:relative;
-  bottom:1ex;
+  vertical-align:super;
 }
