--- a/Assignments/Assignment2.css
+++ b/Assignments/Assignment2.css
@@ -21,6 +21,15 @@ body{
   font-size:30px;
   top:10px;
 }
+.color{
+  color:#fe53bb;
+}
+.size{
+  font-size:24px;
+}
+.font{
+  font-family:"garamond", serif;
+}
 .absolute{
   position:absolute;
   top:300px;
@@ -45,7 +54,7 @@ body{
 	background:#ffc5bf;
 	padding:5px;
 }
-.capitalize{
+.uppercase{
   text-transform:uppercase;
 }
 #bottom{
@@ -57,6 +66,6 @@ body{
 h2, h3{
   color:#281e5d;
 }
-.capitalize li{
+.uppercase li{
   color:#990f02;
 }
