--- a/Assignments/Assignment2.css
+++ b/Assignments/Assignment2.css
@@ -14,7 +14,7 @@ body{
   border:5px #7a4988 groove;
 	height:75px;
 	text-align:center;
-  font-size:20px
+  font-size:20px;
 }
 #fixed{
   position:fixed;
