--- a/Assignments/Assignment4/A4P1.css
+++ b/Assignments/Assignment4/A4P1.css
@@ -17,6 +17,9 @@ body{
 img{
   border:#00316e solid 1.5px;
 }
+.emphasis:hover{
+  border-width:3px;
+}
 #header{
   height:110px;
   width:1215px;
@@ -37,7 +40,7 @@ img{
   text-align:right;
 }
 .sidenav{
-  height:675px;
+  height:1175px;
   width:0;
   position:fixed;
   z-index:1;
@@ -70,7 +73,7 @@ img{
 #content{
   float:right;
   width:1500px;
-  height:500px;
+  height:1000px;
   background-color:#abdeed;
   padding:5px;
 }
@@ -78,7 +81,7 @@ img{
   box-sizing:border-box;
 }
 .slideshow{
-  max-width:400px;
+  max-width:800px;
   position:relative;
   margin:auto;
 }
@@ -159,4 +162,7 @@ img{
 }
 #footer .social{
   text-align:right;
+}
+.social i:hover{
+  color:#abdeed;
 }
