--- a/Assignments/Assignment4/A4P3.css
+++ b/Assignments/Assignment4/A4P3.css
@@ -68,7 +68,7 @@ img{
   font-size:36px;
   margin-left:50px;
 }
-/* navigation overlay code from https://www.w3schools.com/howto/howto_js_sidenav.asp */
+/* “How TO - Side Navigation.” How To Create a Side Navigation Menu, www.w3schools.com/howto/howto_js_sidenav.asp.  */
 #content{
   float:right;
   width:1490px;
